--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@editorjs/table": "^2.2.1",
     "@hookform/resolvers": "^3.1.0",
     "@mantine/hooks": "^6.0.13",
+    "@neondatabase/serverless": "^0.9.1",
     "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/adapter-neon": "^5.13.0",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -65,11 +67,13 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "uploadthing": "^4.0.0",
+    "ws": "^8.16.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/editorjs__header": "^2.6.0",
-    "@types/lodash.debounce": "^4.0.7"
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/ws": "^8.5.10"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "postcss.config.js",
